<resources>
    <string name="app_name">Wongcheeman</string>
    <string name="spm">SPM</string>
    <string name="select_your_qualification">Select your qualification</string>
    <string name="o_level">O-level</string>
    <string name="uec">UEC</string>
    <string name="enter_your_result">Enter your result</string>
    <string name="submit">Submit</string>
    <string name="result_for_bahasa_english">Result for Bahasa English</string>
    <string name="other_subject_which_has_c_above">Other subject which has C above</string>
    <string name="other_subject_which_has_c_above">Other subject which has C above</string>
    <string name="result_for_mathematics">Result for Mathematics</string>
    <string name="result_for_bahasa_malaysia">Result for Bahasa Malaysia</string>
</resources>
